Update html content

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>The Wolfe Pack</title>
+    <title>The CWWWAP System</title>
 </head>
     <body>
         <div class="header">
-            <img class="header-logc" src="IMGs/wolfe-portrait.jpg" alt="">
+            <img class="header-logc" src="IMGs/logo.png" alt="placeholder">
             <div class="links">    
                 <ul> 
                     <li><a href="#container2" class="link">Link One</a></li>
@@ -20,31 +20,32 @@
         </div>
         <div id="container1">
             </div class="top-left">
-                <h1>Welcome Wolfe Heads</h1>
-                <p>Some info about the the site</p>
+                <h1>People Are Saying,</h1>
+                <h1>"Get a Load of CWWWAP!"</h1>
+                <p><strong>The CWWWAP System</strong> is a bullet proof 42-point rubric for decanting and grading one's collection of vintage literature.</p>
                 <button>Wolfe Facts!</button>
             </div>
             <div class="top-right">
-                <img src="IMGs/dino-quote.jpg" alt="">
+                <img src="" alt="placeholder">
             </div>
         <div id="container2">
             <h2>The Solar Cycle in Four Easy Pieces</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="" alt="">
-                    <p>words</p>
+                    <img src="https://i.pinimg.com/originals/84/b8/1c/84b81cfb924088602310714221f6dcec.jpg" alt="deleuze">
+                    <p>S. Grandjean</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p>thoughts</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Frans_Hals_-_Portret_van_Ren%C3%A9_Descartes.jpg" alt="descartes">
+                    <p>T. Mawn</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p>quotes</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Sartre_1967_crop.jpg" alt="sartre">
+                    <p>A. Wilson</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p>knowledge</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/35._Portrait_of_Wittgenstein.jpg" alt="wittgenstein">
+                    <p>R. Zay</p>
                 </div>
             </div>
         </div>
