Update html content

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
     <body>
         <div class="header">
-            <img class="header-logc" src="IMGs/logo.png" alt="placeholder">
+            <img class="header-logc" src="IMGs/logo.png" alt="CWWWAP Logo">
             <div class="links">    
                 <ul> 
-                    <li><a href="#container2" class="link">Link One</a></li>
-                    <li><a href="#container3" class="link">Link Two</a></li>
-                    <li><a href="#container4" class="link">Link Three</a></li>
+                    <li><a href="#container2" class="link">About</a></li>
+                    <li><a href="#container3" class="link">Shop</a></li>
+                    <li><a href="https://github.com/zardoz8901" class="link">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -22,14 +22,15 @@
             </div class="top-left">
                 <h1>People Are Saying,</h1>
                 <h1>"Get a Load of CWWWAP!"</h1>
-                <p><strong>The CWWWAP System</strong> is a bullet proof 42-point rubric for decanting and grading one's collection of vintage literature.</p>
-                <button>Wolfe Facts!</button>
+                <p><strong>The CWWWAP System</strong> is a future-proofed 42-point sterling rubric for decanting and grading one's collection of vintage/contemporary literature.</p>
+                <p>Remember <strong>CWWWAP</strong> not <strong><a href="http://www.foddy.net/Athletics.html">QWOP!</a></strong></p>
+                <button class="button">But Don't Take My Word For It!</button>
             </div>
             <div class="top-right">
-                <img src="" alt="placeholder">
+                <img src="IMGs/alchemist-color.jpg" alt="Alchemist standing in smoky room standing over a seeing orb">
             </div>
         <div id="container2">
-            <h2>The Solar Cycle in Four Easy Pieces</h2>
+            <h2>A Word From Our Founders</h2>
             <div class="cards">
                 <div class="card">
                     <img src="https://i.pinimg.com/originals/84/b8/1c/84b81cfb924088602310714221f6dcec.jpg" alt="deleuze">
@@ -50,8 +51,12 @@
             </div>
         </div>
         <div id="container3">
-            <p class="quote">quote</p>
-            <p class="quotee">author</p>
+            <p class="testimonial">testimonial-1</p>
+            <p class="testiomee">testimonee</p>
+            <p class="testimonial">testimonial-2</p>
+            <p class="testiomee">testimonee</p>
+            <p class="testimonial">testimonial-3</p>
+            <p class="testiomee">testimonee</p>
         </div>
         <div id="container4">
             <div class="banner">
@@ -59,11 +64,11 @@
                     <p></p>
                     <p></p>
                 </div>
-                <button>Your Signature Here!</button>
+                <button id="signup">Your Signature Here!</button>
             </div>
         </div>
-        <div class="footer">
-
+        <div class="footer" id="footer">
+            <a href="https://github.com/zardoz8901"><p>Webpage by Zardoz8901</a></p>
         </div>
     </body>
 </html>
