Update html content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <div class="header">
-            <img class="header-logc" src="IMGs/logo.png" alt="CWWWAP Logo">
+            <img class="header-logo" src="IMGs/logo.png" alt="CWWWAP Logo">
             <div class="links">    
                 <ul> 
                     <li><a href="#container2" class="link">About</a></li>
@@ -20,14 +20,17 @@
         </div>
         <div id="container1">
             </div class="top-left">
-                <h1>People Are Saying,</h1>
-                <h1>"Get a Load of CWWWAP!"</h1>
-                <p><strong>The CWWWAP System</strong> is a future-proofed 42-point sterling rubric for decanting and grading one's collection of vintage/contemporary literature.</p>
-                <p>Remember <strong>CWWWAP</strong> not <strong><a href="http://www.foddy.net/Athletics.html">QWOP!</a></strong></p>
-                <button class="button">But Don't Take My Word For It!</button>
+                <div class="text-box">
+                    <h1>People Are Saying,</h1>
+                    <h1>"Get a Load of CWWWAP!"</h1>
+                    <p><strong>The CWWWAP System</strong> is a future-proofed 42-point sterling rubric for decanting and grading one's collection of vintage/contemporary literature.</p>
+                    <p>Remember <strong>CWWWAP</strong> not <strong><a href="http://www.foddy.net/Athletics.html">QWOP!</a></strong></p>
+                </div>
+                <div class="button"><button>But Don't Take My Word For It!</button></div>
             </div>
             <div class="top-right">
                 <img src="IMGs/alchemist-color.jpg" alt="Alchemist standing in smoky room standing over a seeing orb">
+                <p>Our CWWWAP scientists deep in development of the "Wine Score".</p>
             </div>
         <div id="container2">
             <h2>A Word From Our Founders</h2>
