Update html and css

--- a/index.html
+++ b/index.html
@@ -13,47 +13,50 @@
             <div class="links">    
                 <ul> 
                     <li><a href="#container2" class="link">About</a></li>
-                    <li><a href="#container3" class="link">Shop</a></li>
+                    <li><a href="#shop-button" class="link">Shop</a></li>
                     <li><a href="https://github.com/zardoz8901" class="link">Contact</a></li>
                 </ul>
             </div>
         </div>
-        <div id="container1">
-            </div class="top-left">
+        <div class="container intro">
+            <div class="top-left">
                 <div class="text-box">
                     <h1>People Are Saying,</h1>
                     <h1>"Get a Load of CWWWAP!"</h1>
                     <p><strong>The CWWWAP System</strong> is a future-proofed 42-point sterling rubric for decanting and grading one's collection of vintage/contemporary literature.</p>
                     <p>Remember <strong>CWWWAP</strong> not <strong><a href="http://www.foddy.net/Athletics.html">QWOP!</a></strong></p>
                 </div>
-                <div class="button"><button>But Don't Take My Word For It!</button></div>
+                <div class="button">
+                    <button>But Don't Take My Word For It!</button>
+                </div>
             </div>
             <div class="top-right">
                 <img src="IMGs/alchemist-color.jpg" alt="Alchemist standing in smoky room standing over a seeing orb">
                 <p>Our CWWWAP scientists deep in development of the "Wine Score".</p>
             </div>
-        <div id="container2">
+        </div>
+        <div class="container images" id="container2">
             <h2>A Word From Our Founders</h2>
-            <div class="cards">
-                <div class="card">
+            <div class="founder-placard-holder">
+                <div class="founder-placard">
                     <img src="https://i.pinimg.com/originals/84/b8/1c/84b81cfb924088602310714221f6dcec.jpg" alt="deleuze">
                     <p>S. Grandjean</p>
                 </div>
-                <div class="card">
+                <div class="founder-placard">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Frans_Hals_-_Portret_van_Ren%C3%A9_Descartes.jpg" alt="descartes">
                     <p>T. Mawn</p>
                 </div>
-                <div class="card">
+                <div class="founder-placard">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Sartre_1967_crop.jpg" alt="sartre">
                     <p>A. Wilson</p>
                 </div>
-                <div class="card">
+                <div class="founder-placard">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/35._Portrait_of_Wittgenstein.jpg" alt="wittgenstein">
                     <p>R. Zay</p>
                 </div>
             </div>
         </div>
-        <div id="container3">
+        <div class="container testimonial">
             <p class="testimonial">testimonial-1</p>
             <p class="testiomee">testimonee</p>
             <p class="testimonial">testimonial-2</p>
@@ -61,16 +64,16 @@
             <p class="testimonial">testimonial-3</p>
             <p class="testiomee">testimonee</p>
         </div>
-        <div id="container4">
+        <div class="container banner">
             <div class="banner">
                 <div class="subscribe">
                     <p></p>
                     <p></p>
                 </div>
-                <button id="signup">Your Signature Here!</button>
+                <button class=button id="shop-button">Join Us!</button>
             </div>
         </div>
-        <div class="footer" id="footer">
+        <div class="footer">
             <a href="https://github.com/zardoz8901"><p>Webpage by Zardoz8901</a></p>
         </div>
     </body>
