--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>The CWWWAP System</title>
 </head>
     <body>
+        <div class="gutter">
+
+        </div>
         <div class="header">
             <img class="header-logo" src="IMGs/logo.png" alt="CWWWAP Logo">
             <div class="links">    
@@ -19,7 +22,7 @@
             </div>
         </div>
         <div class="container intro">
-            <div class="top-left">
+            <div class="intro-left">
                 <div class="text-box">
                     <h1>People Are Saying,</h1>
                     <h1>"Get a Load of CWWWAP!"</h1>
@@ -30,8 +33,8 @@
                     <button>But Don't Take My Word For It!</button>
                 </div>
             </div>
-            <div class="top-right">
-                <img src="IMGs/alchemist-color.jpg" alt="Alchemist standing in smoky room standing over a seeing orb">
+            <div class="intro-right">
+                <img class="joke-image" src="IMGs/alchemist-color.jpg" alt="Alchemist standing in smoky room standing over a seeing orb">
                 <p>Our CWWWAP scientists deep in development of the "Wine Score".</p>
             </div>
         </div>
@@ -75,6 +78,8 @@
         </div>
         <div class="footer">
             <a href="https://github.com/zardoz8901"><p>Webpage by Zardoz8901</a></p>
+        </div>
+        <div class="gutter">
         </div>
     </body>
 </html>
