--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
     <body>
         <div class="gutter">
-
-        </div>
+    </div>
         <div class="header">
             <img class="header-logo" src="IMGs/logo.png" alt="CWWWAP Logo">
             <div class="links">    
@@ -21,65 +20,18 @@
                 </ul>
             </div>
         </div>
-        <div class="container intro">
-            <div class="intro-left">
-                <div class="text-box">
-                    <h1>People Are Saying,</h1>
-                    <h1>"Get a Load of CWWWAP!"</h1>
-                    <p><strong>The CWWWAP System</strong> is a future-proofed 42-point sterling rubric for decanting and grading one's collection of vintage/contemporary literature.</p>
-                    <p>Remember <strong>CWWWAP</strong> not <strong><a href="http://www.foddy.net/Athletics.html">QWOP!</a></strong></p>
+        <div class="intro">
+            <div class="intro-placard">
+                <div class="intro-text">
+                    <h1 class="intro-header-left">People Are Saying,<div class="break">"Get a Load of CWWWAP!"</div></h1>
+                    <p  class="intro-body"><strong>The CWWWAP System</strong> is a future-proofed 42-point sterling rubric for decanting and grading one's collection of vintage/contemporary literature.</p>
+                    <p class="intro-body">Remember <strong>CWWWAP</strong> not <strong><a class="intro-link" href="http://www.foddy.net/Athletics.html">QWOP!</a></strong></p>
+                    <div class="button">
+                        <button class="button"><a href="#testimonials">But Don't Take My Word For It!</a></button>
+                    </div>
+                <div class="intro-image-placard">
+                    <img class=intro-image src="IMGs/alchemist-color.jpg" alt="An alchemist stands in his labratory prognosticationg via crystal ball.">
                 </div>
-                <div class="button">
-                    <button>But Don't Take My Word For It!</button>
-                </div>
-            </div>
-            <div class="intro-right">
-                <img class="joke-image" src="IMGs/alchemist-color.jpg" alt="Alchemist standing in smoky room standing over a seeing orb">
-                <p>Our CWWWAP scientists deep in development of the "Wine Score".</p>
-            </div>
-        </div>
-        <div class="container images" id="container2">
-            <h2>A Word From Our Founders</h2>
-            <div class="founder-placard-holder">
-                <div class="founder-placard">
-                    <img src="https://i.pinimg.com/originals/84/b8/1c/84b81cfb924088602310714221f6dcec.jpg" alt="deleuze">
-                    <p>S. Grandjean</p>
-                </div>
-                <div class="founder-placard">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Frans_Hals_-_Portret_van_Ren%C3%A9_Descartes.jpg" alt="descartes">
-                    <p>T. Mawn</p>
-                </div>
-                <div class="founder-placard">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Sartre_1967_crop.jpg" alt="sartre">
-                    <p>A. Wilson</p>
-                </div>
-                <div class="founder-placard">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/35._Portrait_of_Wittgenstein.jpg" alt="wittgenstein">
-                    <p>R. Zay</p>
-                </div>
-            </div>
-        </div>
-        <div class="container testimonial">
-            <p class="testimonial">testimonial-1</p>
-            <p class="testiomee">testimonee</p>
-            <p class="testimonial">testimonial-2</p>
-            <p class="testiomee">testimonee</p>
-            <p class="testimonial">testimonial-3</p>
-            <p class="testiomee">testimonee</p>
-        </div>
-        <div class="container banner">
-            <div class="banner">
-                <div class="subscribe">
-                    <p></p>
-                    <p></p>
-                </div>
-                <button class=button id="shop-button">Join Us!</button>
-            </div>
-        </div>
-        <div class="footer">
-            <a href="https://github.com/zardoz8901"><p>Webpage by Zardoz8901</a></p>
-        </div>
-        <div class="gutter">
         </div>
     </body>
 </html>
