--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
             <li class="link">Link Three</li>
         </ul>
     </div>
+    <div class="intro">
+        <div class="intro-card-one">
+            <h1 class="intro-headline">This webpage is a webpage</h1>
+            <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Congue eu consequat ac felis donec et. Porttitor leo a diam sollicitudin tempor id eu.</p>
+            <button class="button">Sign up</button>
+        </div>
+        <div class="intro-card-two">
+            <img src="http://placekitten.com/400/200" alt="a cute image of a kitten">
+        </div>
+    </div>
 </body>
 </html>
