--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header-page">
-        <h2 class="header-logo">Header Logo</h2>
-        <ul class="header-menu">
-            <li class="link">Link One</li>
-            <li class="link">Link Two</li>
-            <li class="link">Link Three</li>
-        </ul>
-    </div>
-    <div class="intro">
-        <div class="intro-card-one">
-            <h1 class="intro-headline">This webpage is a webpage</h1>
-            <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Congue eu consequat ac felis donec et. Porttitor leo a diam sollicitudin tempor id eu.</p>
-            <button class="button">Sign up</button>
+    <div class="gutter"></div>
+    <div class="main">
+        <div class="header-page">
+            <h2 class="header-logo">Header Logo</h2>
+            <ul class="header-menu">
+                <li class="link">Link One</li>
+                <li class="link">Link Two</li>
+                <li class="link">Link Three</li>
+            </ul>
         </div>
-        <div class="intro-card-two">
-            <img src="http://placekitten.com/400/200" alt="a cute image of a kitten">
+        <div class="intro">
+            <div class="intro-card-one">
+                <h1 class="intro-headline">This webpage is a webpage</h1>
+                <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Congue eu consequat ac felis donec et. Porttitor leo a diam sollicitudin tempor id eu.</p>
+                <button class="button">Sign up</button>
+            </div>
+            <div class="intro-card-two">
+                <img src="http://placekitten.com/400/200" alt="a cute image of a kitten">
+            </div>
         </div>
     </div>
+    <div class="gutter"></div>
 </body>
 </html>
