Update intro html and css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="button">Sign up</button>
             </div>
             <div class="intro-card-two">
-                <img src="http://placekitten.com/400/200" alt="a cute image of a kitten">
+                <img class="test-image" src="http://placekitten.com/400/200" alt="a cute image of a kitten">
             </div>
         </div>
     </div>
