Update information html and css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
                 <img class="test-image" src="http://placekitten.com/400/200" alt="a cute image of a kitten">
             </div>
         </div>
+        <div class="information">
+                <h1 class="information-headline">Some relevant information</h1>
+            <div class="information-boxes">
+                    <div class="box-container">
+                        <div class="box"></div>
+                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="box-container">
+                        <div class="box"></div>
+                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="box-container">
+                        <div class="box"></div>
+                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="box-container">
+                        <div class="box"></div>
+                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+            </div>
+        </div>
     </div>
     <div class="gutter"></div>
 </body>
