Update quote html and css

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     </div>
             </div>
         </div>
+        <div class="quote">
+            <div class="quote-text">
+                <p class="quote-text"><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lobortis feugiat vivamus at augue eget arcu dictum varius. Eu consequat ac felis donec et odio pellentesque diam. Gravida in fermentum et sollicitudin ac orci phasellus egestas tellus."</em></p>
+                <h2 class="quote-author">-Hodor, hodor</h2>
+            </div>
+        </div>
     </div>
     <div class="gutter"></div>
 </body>
