Update html and css

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <div class="information-boxes">
                     <div class="box-container">
                         <div class="box"></div>
-                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="box-descriptor">vitae justo eget magna fermentum iaculis eu non</p>
                     </div>
                     <div class="box-container">
                         <div class="box"></div>
-                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="box-descriptor">vitae justo eget magna fermentum iaculis eu non</p>
                     </div>
                     <div class="box-container">
                         <div class="box"></div>
-                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="box-descriptor">vitae justo eget magna fermentum iaculis eu non</p>
                     </div>
                     <div class="box-container">
                         <div class="box"></div>
-                        <p class="box-descriptor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="box-descriptor">vitae justo eget magna fermentum iaculis eu non</p>
                     </div>
             </div>
         </div>
@@ -54,6 +54,18 @@
                 <p class="quote-text"><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lobortis feugiat vivamus at augue eget arcu dictum varius. Eu consequat ac felis donec et odio pellentesque diam. Gravida in fermentum et sollicitudin ac orci phasellus egestas tellus."</em></p>
                 <h2 class="quote-author">-Hodor, hodor</h2>
             </div>
+        </div>
+        <div class="banner">
+            <div class="banner-card">
+                <div class="banner-text">
+                    <h3 class="banner-header">Click that button! Do it now!</h3>
+                    <p class="banner-text">Sign up for the product by click the button to the right!</p>
+                </div>
+                <button class="banner-button">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
+            <p class="footer-text">Webpage by Zardoz8901</p>
         </div>
     </div>
     <div class="gutter"></div>
